--- a/src/App.css
+++ b/src/App.css
@@ -8,18 +8,8 @@
   grid-template-columns: 2fr 10fr;
   /* grid-gap: 10px; */
 }
-.header {
-  grid-area: h;
-  background-color: #2020d4;
-}
-.logo {
-  width: 100px;
-}
-.nav {
-  grid-area: n;
-  background-color: #3f3f87;
-}
-.content {
+
+.app-wrapper-content {
   grid-area: c;
   background-color: #5656bb;
   width: 1200px;
