--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,7 +1,13 @@
 .nav {
   grid-area: n;
   background-color: #3f3f87;
+  padding: 20px;
 }
-.item {
+.item a {
   color: white;
+  text-decoration: none;
+}
+
+.active-link {
+  color: gold;
 }
